# fastapi_template

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  create_db.py  docker-compose.yml  main.py  pyproject.toml  setup.py
.github/: rename_project.sh
alembic/: env.py
app/: hash_tool.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: items.py
app/auth/: dependencies.py  engine.py  policies.py  utils.py
app/constants/: error.py
app/controller/: auth.py  item.py  item_controller.py
app/core/: _security.py  auth.py  config.py  logging.py  security.py
app/db/: base.py  session.py
app/entities/: __init__.py  associations.py  audit.py  item.py  order.py  product.py  role.py  user.py
app/error/: codes.py  exceptions.py
app/modules/error/: handlers.py  middleware.py
app/repo/: item.py
app/repositories/: items.py
app/schema/: audit.py  item.py  order.py  product.py  response.py  user.py
app/schemas/: item.py
app/service/: item.py
app/services/: items.py
app/tests/: abac_policies_test.py  item_tests.py
app/utils/: error.py
fastapi_template/: app.py
